--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@tiptap/starter-kit": "^3.16.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.29.2",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.562.0",
+    "marked": "^17.0.1",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/marked": "^6.0.0",
     "@types/node": "^20.19.30",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
