--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "tiptap-markdown": "^0.9.0",
     "uuid": "^13.0.0"
   },
