--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.29.2",
+    "github-slugger": "^2.0.0",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.562.0",
     "marked": "^17.0.1",
